objects/geopointe__GP_Schedule_Exception__c.object
<CustomObject>
    <fields>
        <fullName>geopointe__Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>geopointe__End_Location_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Location Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__End_Location__c</fullName>
        <label>End Location</label>
        <scale>9</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>geopointe__End_Time__c</fullName>
        <label>End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>geopointe__RoutePlanner_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RoutePlanner Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Start_Location_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Location Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Start_Location__c</fullName>
        <label>Start Location</label>
        <scale>9</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>geopointe__Start_Time__c</fullName>
        <label>Start Time</label>
        <type>Time</type>
    </fields>
    <label>Geopointe Schedule Exception</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Geopointe Schedule Exception Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Schedule Exceptions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>